@@ -37,6 +37,7 @@ Also see http://simplesamlphp.org/docs/1.5/simplesamlphp-sp
 			- elgg:lastname => the lastname (surname) of the user (optional)
 			- elgg:email => the email address of the user (optional, when missing will be asked)
 			- elgg:external_id => a persistend unique id for this user (required, but can also be collected in a different way)
+			- elgg:username => a unique username for the user. This will be used when creating a user (if still available in Elgg)
 	- add the new entityID to /metadata/saml20-idp-remote.php (see http://simplesamlphp.org/docs/1.5/simplesamlphp-sp#section_2)
 
 === Step 2.2: Elgg configuration, first part ===
